--- a/style.css
+++ b/style.css
@@ -44,6 +44,23 @@ h1 {
  font-size: 40px;
 }
 
+#head h1 {
+ font-family: 'FiraSans-Bold', sans-serif;
+ margin-top: 15px;
+ text-align: left;
+ color: #1d1d42;
+ font-size: 12px;
+
+}
+
+#head h2 {
+ font-family: 'FiraSans-Bold', sans-serif;
+ margin-top: 15px;
+ text-align: left;
+ color: #d6b40c;
+ font-size: 40px;
+}
+
 h3 {
   font-family: 'FiraSans-Bold' sans-serif;
   color: #d8d8d8;
@@ -60,7 +77,7 @@ p {
   font-size: 20px;
 
   line-height: 170%;
-  color: #555555;
+  color: #757575;
 }
 
 /* About page list*/
@@ -240,7 +257,7 @@ img {
 
 .about_header img {
 
-     position: absolute;
+    position: absolute;
     z-index: 1;
     left:0px;
     margin:0;
@@ -250,7 +267,16 @@ img {
     height: auto;
 
    
-}
+} 
+
+/*@media screen and (max-width: 600px) {
+    .about_header img {
+        display: none;
+    }
+}*/
+
+
+
 
 .polygon img{
 
@@ -263,19 +289,6 @@ img {
     position: relative;
     z-index: 2;
     top: 20px;
-}
-
-.words{
- 
-    }
-
-#left4{
-
-
-}
-
-#right8{
-  padding-top: 100px;
 }
 
 
@@ -321,13 +334,11 @@ img {
 }
 
 /* Front page tiles */
-.tiles{
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    padding-top: 600px;
-    padding-bottom: 50px;
-    align-content: center;
+.tiles img{
+    display: block;
+    float: left;
+    padding: 0 !important;
+  
 }
 
 
@@ -340,7 +351,14 @@ img {
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
+  animation: header_animation 3s;
 
+}
+
+@keyframes header_animation {
+
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .about_header h1 {
