--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -10,7 +10,7 @@
   padding-top: 100px;
 
   position: fixed;
-  height: 1000px;
+  height: 100vh;
   width: 100%;
   overflow: scroll;
 }
@@ -35,7 +35,7 @@
 .content-card {
   position: relative;
   margin: 0 var(--content-card-margin);
-  height: 100%;
+  height: auto;
   width: calc(100% - 2 * var(--content-card-margin));
   background-color: white;
 
