--- a/my-app/src/Grid.css
+++ b/my-app/src/Grid.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
   padding: 50px;
-  padding-bottom: 170px;
+  padding-bottom: calc(var(--footer-height) + 50px);
   grid-gap: 50px;
 }
