--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -16,13 +16,20 @@
   overflow: scroll;
 }
 
-.App-options {
-  margin-left: 75vh;
-  margin-top: 30px;
+.App-header {
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  height: 300px;
+}
+
+.my-name {
+  float: left;
 }
 
 a {
-  padding-left: 5px;
+  padding-left: 25px;
+  float: right;
 }
 
 a:hover {
@@ -31,7 +38,9 @@ a:hover {
 }
 
 .App-title {
-  padding-top: 80px;
+  position: absolute;
+  top: 150px;
+  left: 60px;
   font-size: 1.5em;
 }
 
@@ -42,10 +51,11 @@ a:hover {
 .App-footer {
   position: absolute;
   left: calc(0px - var(--content-card-margin));
-  bottom: 0;
+  bottom: calc(0px - var(--footer-height));
   height: var(--footer-height);
   width: 100vw;
   background-color: #C1B2BF;
+  z-index: 1;
 }
 
 .content-card-wrapper {
