--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -1,9 +1,8 @@
 .tile {
   position: relative;
-  margin: 0 auto;
 
-  height: 268px;
-  width: 235px;
+  height: 500px;
+  width: 350px;
   background-color: #D6C8D1;
 
   border-radius: 18px;
@@ -15,29 +14,29 @@
   bottom: 0;
 
   background-color: white;
-  height:110px;
+  height:187px;
   width: 100%;
+}
+
+.tile-text-box {
+  position: absolute;
+  top: 43px;
+  left: 43px;
+
+  text-align: left;
 }
 
 .tile-header-text {
   color: #EA1C44;
   font-size: 8px;
-  position: absolute;
-  left: 25px;
-  top: 10px;
 }
 
 .tile-title {
-  position: absolute;
-  top: 30px;
-  left: 25px;
+  padding-top: 10px;
 }
 
 .tile-desc {
   color: #7F7F7F;
   font-size: 10px;
-
-  position: absolute;
-  top: 60px;
-  left: 25px;
+  padding-top: 7px;
 }
