--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -1,11 +1,9 @@
 :root {
-  --content-card-margin: 0;
   --footer-height: 111px;
 }
 
 .App {
   text-align: center;
-  background-color: #EEF1F8;
   color: black;
 
   padding-top: 10px;
@@ -21,6 +19,10 @@
   margin-left: 30px;
   margin-right: 30px;
   height: 70vh;
+}
+
+.App-header.no-title {
+  height: 60px;
 }
 
 .my-name {
@@ -50,7 +52,7 @@ a:hover {
 
 .App-footer {
   position: absolute;
-  left: calc(0px - var(--content-card-margin));
+  left: 0;
   bottom: calc(0px - var(--footer-height));
   height: var(--footer-height);
   width: 100vw;
@@ -58,21 +60,11 @@ a:hover {
   z-index: 1;
 }
 
-.card-tab-wrapper {
-  position: absolute;
-  bottom: 0;
-
-  margin: 0 0;
-  height: auto;
-  width: 100%;
-}
-
 .content-card-wrapper {
   position: relative;
-  margin: 0 var(--content-card-margin);
-  height: auto;
-  width: calc(100% - 2 * var(--content-card-margin));
-  background-color: white;
-
   border-radius: 18px;
+}
+
+.content-card-wrapper.tiles {
+  box-shadow: 0 -5px 30px 0 rgba(0,0,0,0.11),0 -2px 15px 0 rgba(0,0,0,0.08);
 }
