--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -15,9 +15,6 @@
 }
 
 .App-header {
-  margin-top: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
   height: 70vh;
 }
 
@@ -39,11 +36,26 @@ a:hover {
   color: blue;
 }
 
+.navbar {
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  padding-top: 20px;
+  padding-left: 35px;
+  padding-right: 60px;
+  box-sizing: border-box;
+}
+
 .App-title {
-  position: absolute;
-  top: 150px;
-  left: 60px;
+  padding-top: 150px;
+  padding-left: 60px;
   font-size: 1.5em;
+  text-align: left;
 }
 
 .App-intro {
@@ -53,9 +65,9 @@ a:hover {
 .App-footer {
   position: absolute;
   left: 0;
-  bottom: calc(0px - var(--footer-height));
+  bottom: 0;
   height: var(--footer-height);
-  width: 100vw;
+  width: 100%;
   background-color: #C1B2BF;
   z-index: 1;
 }
