--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -6,8 +6,8 @@
   background-color: #D6C8D1;
 
   border-radius: 18px;
-  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),0 5px 15px 0 rgba(0,0,0,0.08);
   overflow: hidden;
+  box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
 }
 
 .tile-bottom {
@@ -21,23 +21,31 @@
 
 .tile-text-box {
   position: absolute;
-  top: 43px;
-  left: 43px;
-
+  top: 46px;
+  left: 46px;
+  margin-right: 46px;
   text-align: left;
 }
 
 .tile-header-text {
+  font-family: 'Roboto', sans-serif;
   color: #EA1C44;
-  font-size: 8px;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .tile-title {
-  padding-top: 10px;
+  color: #333333;
+  font-family: 'Roboto', sans-serif;
+  padding-top: 12px;
+  font-size: 24px;
 }
 
 .tile-desc {
   color: #7F7F7F;
-  font-size: 10px;
-  padding-top: 7px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  padding-top: 6px;
+
 }
