--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -39,23 +39,26 @@ a:hover {
 }
 
 .navbar {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+
   width: 100%;
-  height: 50px;
-  background-color: white;
+  height: 55px;
+  background-color: rgba(255, 255, 255, 0.8);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
-
+  
   padding-top: 20px;
-  padding-left: 35px;
-  padding-right: 60px;
+  padding-left: 168px;
+  padding-right: 190px;
   box-sizing: border-box;
 }
 
 .App-title {
   padding-top: 150px;
-  padding-left: 60px;
+  padding-left: 190px;
   text-align: left;
   font-family: 'Playfair Display', serif;
   font-weight: 700;
@@ -88,5 +91,5 @@ a:hover {
 }
 
 .content-card-wrapper.tiles {
-  box-shadow: 0 -5px 30px 0 rgba(0,0,0,0.11),0 -2px 15px 0 rgba(0,0,0,0.08);
+  box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.11),0 -2px 15px 0 rgba(0,0,0,0.08);
 }
