--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto:300,400,900');
 
+/* BASELINE */
+
 :root {
   --footer-height: 111px;
+}
+
+h1 {
+  text-align: left;
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-size: 2.0em;
 }
 
 /* HEADER */
@@ -108,10 +117,6 @@ a:hover {
 
 .App-title {
   padding-top: 150px;
-  text-align: left;
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
-  font-size: 2.0em;
 }
 
 .App-intro {
