--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -43,18 +43,26 @@ h1 {
 }
 
 a {
-  padding-left: 25px;
+  padding-left: 45px;
   float: right;
+
+  -webkit-transition: margin 0.3s ease-out;
+  -moz-transition: margin 0.3s ease-out;
+  -o-transition: margin 0.3s ease-out;
 }
 
 a:hover {
+
   cursor: pointer;
-  color: blue;
+  margin-top: -1px;
+  font-weight: 600;
+  color: #EA1C44;
 }
 
 .navbar {
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-weight: 500;
+  color: #777;
 
   width: 100%;
   height: 55px;
