--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -3,7 +3,7 @@
 
   height: 500px;
   width: 350px;
-  background-color: #D6C8D1;
+  background-color: #FDEDEE;
 
   border-radius: 18px;
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
@@ -14,10 +14,41 @@
 }
 
  .tile:hover {
-    margin-top: -15px;
+    margin-top: -5px;
     cursor: pointer;
 }
 
+/* delete if not work */
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  border-radius: 18px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.tile:hover .overlay {
+  opacity: 1;
+}
+
+.overlay-text {
+  color: #333333;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+/* ^^^^ delete if not work */
 
 .tile-bgd {
   width: 100%;
