--- a/my-app/src/Footer.css
+++ b/my-app/src/Footer.css
@@ -16,6 +16,8 @@
 }
 
 .footer-text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   width: calc( 100% - 40px);
   margin: 0 20px;
 }
