--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -9,6 +9,11 @@ h1 {
   font-size: 2.0em;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /* HEADER */
 
 .App {
@@ -50,13 +55,13 @@ h1 {
   float: left;
 }
 
-.my-name {
+.navbar.my-name {
   position: absolute;
   left: 20px;
   padding: 0;
 }
 
-a {
+.navbar a {
   padding-left: 25px;
   float: right;
 }
