--- a/my-app/src/ContentWrapper.css
+++ b/my-app/src/ContentWrapper.css
@@ -1,3 +1,5 @@
+/* WRAPPER */
+
 .content-wrapper {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -21,4 +23,53 @@
     padding: 110px 190px;
     margin: 0;
   }
+}
+
+/* HEADER */
+
+.content-header {
+  width: 100%;
+  height: 200px;
+  background-size: 650px;
+  background-position: right;
+}
+
+@media all and (min-width: 650px) {
+  .content-header {
+    height: 318px;
+    background-size: 1440px;
+    background-position: left;
+  }
+}
+
+/* TITLE */
+
+.content-title {
+  height: 204px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+}
+
+@media all and (min-width: 650px) {
+  .content-title {
+    position: absolute;
+    width: calc(100% - 350px);
+    top: 210px;
+    left: 175px;
+    padding: 0 50px;
+  }
+}
+
+@media all and (min-width: 1000px) {
+  .content-title {
+    width: 642px;
+    padding: 0 100px;
+  }
+}
+
+/* MISC */
+
+.clear-float {
+  clear: both;
 }
