--- a/my-app/src/About.css
+++ b/my-app/src/About.css
@@ -1,46 +1,58 @@
 .shape-container {
   position: relative;
-  height: 475px;
-  width: 420px;
+  margin: 0 auto;
   margin-bottom: 1.25em;
-  float: left;
-}
-
-.rectangle {
-  position: absolute;
-  top: 95px;
-  height: 375px;
-  width: 334px;
-  background-color: #FDEDEE;
-}
-
-.daihan-who {
-  position: absolute;
-  left: 50px;
-  height: 419px;
-  width: 315px;
-  background-image: url('./images/daihan.png');
-  background-size: 300px;
-  background-repeat: no-repeat;
-
-
-  -webkit-transition: margin 0.3s ease-out;
-  -moz-transition: margin 0.3s ease-out;
-  -o-transition: margin 0.3s ease-out;
-}
-
- .daihan-who:hover {
-    margin-top: -5px;
 }
 
 .daihan-caption {
   word-wrap: break-word;
 }
 
-.daihan-desc {
-  height: 100px;
+.daihan-who {
+  height: 400px;
+  max-width: 300px;
+  margin: 0 auto;
+  background-image: url('./images/daihan.png');
+  background-size: 300px;
+  background-repeat: no-repeat;
 }
 
-.clear-float {
-  clear: both;
+@media all and (min-width: 470px) {
+  .shape-container {
+    height: 475px;
+    width: 420px;
+  }
+
+  .rectangle {
+    position: absolute;
+    top: 95px;
+    height: 375px;
+    width: 334px;
+    background-color: #FDEDEE;
+  }
+
+  .daihan-who {
+    position: absolute;
+    left: 50px;
+    height: 419px;
+    width: 315px;
+
+    -webkit-transition: margin 0.3s ease-out;
+    -moz-transition: margin 0.3s ease-out;
+    -o-transition: margin 0.3s ease-out;
+  }
+
+   .daihan-who:hover {
+      margin-top: -5px;
+  }
+}
+
+@media all and (min-width: 600px) {
+  .shape-container {
+    float: left;
+  }
+  .daihan-caption {
+    height: 475px;
+    overflow: scroll;
+  }
 }
