--- a/my-app/src/ContentWrapper.css
+++ b/my-app/src/ContentWrapper.css
@@ -6,7 +6,7 @@
     font-weight: 300;
     line-height: 1.8em;
     width: 100%;
-    padding: 110px 25px;
+    padding: 55px 25px 80px 25px;
     box-sizing: border-box;
 }
 
