--- a/my-app/src/Grid.css
+++ b/my-app/src/Grid.css
@@ -25,3 +25,12 @@
     padding: 50px 25px;
   }
 }
+
+/* INTRO */
+
+.intro-text {
+  color: #333333;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  font-size: 16px;
+}
