--- a/my-app/src/About.css
+++ b/my-app/src/About.css
@@ -37,9 +37,7 @@
     height: 419px;
     width: 315px;
 
-    -webkit-transition: margin 0.3s ease-out;
-    -moz-transition: margin 0.3s ease-out;
-    -o-transition: margin 0.3s ease-out;
+    transition: margin 0.3s ease-out;
   }
 
    .daihan-who:hover {
@@ -58,5 +56,6 @@
 }
 
 .about-footer {
+  padding-bottom: 114px;
   width: 100%;
 }
