--- a/my-app/src/Grid.css
+++ b/my-app/src/Grid.css
@@ -1,7 +1,14 @@
 .grid-wrapper {
   position: relative;
   border-radius: 18px;
-  box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.11),0 -2px 15px 0 rgba(0,0,0,0.08);
+  padding-bottom: 30px;
+  box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.05),0 -2px 15px 0 rgba(0,0,0,0.05);
+}
+
+@media all and (min-width: 650px) {
+  .grid-wrapper {
+    margin-top: 60px;
+  }
 }
 
 .grid-wrapper-bottom {
@@ -20,7 +27,7 @@
   justify-content: center;
 }
 
-@media all and (max-width: 350px) {
+@media all and (max-width: 375px) {
   .grid-container {
     padding: 50px 25px;
   }
