--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -15,11 +15,11 @@ a, button {
   font: inherit;
   text-decoration: none;
   color: black;
+  transition: color 0.3s ease-in-out;
 }
 
 a:hover, button:hover {
   cursor: pointer;
-  margin-top: -1px;
   color: #EA1C44;
 }
 
@@ -40,7 +40,7 @@ a:hover, button:hover {
 }
 
 .App-header {
-  height: 60px;
+  height: 35px;
 }
 
 /* NAVBAR */
@@ -72,10 +72,10 @@ a:hover, button:hover {
 
 .navbar button {
   margin-left: 45px;
+  top: 0;
 
-  -webkit-transition: margin 0.3s ease-out;
-  -moz-transition: margin 0.3s ease-out;
-  -o-transition: margin 0.3s ease-out;
+  /* TODO: Fix hover flicker bug */
+  transition: top 0.3s ease-in-out;
 }
 
 .navbar button:first-child {
@@ -83,7 +83,8 @@ a:hover, button:hover {
 }
 
 .navbar button:hover {
-  font-weight: 600;
+  position: relative; 
+  top: -2px;
 }
 
 .hamburger {
@@ -121,7 +122,7 @@ a:hover, button:hover {
   left: 0;
   z-index: 1000;
 
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 25px;
   padding-right: 25px;
   box-sizing: border-box;
