--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -3,14 +3,12 @@
 
   height: 500px;
   width: 350px;
-  background-color: #FDEDEE;
+  background-color: #FFFFFF;
 
   border-radius: 18px;
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
 
-  -webkit-transition: margin 0.3s ease-out;
-  -moz-transition: margin 0.3s ease-out;
-  -o-transition: margin 0.3s ease-out;
+  transition: margin 0.3s ease-out;
 }
 
 @media all and (max-width: 350px) {
@@ -37,7 +35,7 @@
   opacity: 0;
   transition: .3s ease;
   border-radius: 18px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.95);
 }
 
 .tile:hover .overlay {
@@ -46,7 +44,7 @@
 
 .overlay-text {
   color: #333333;
-  font-size: 20px;
+  font-size: 16px;
   position: absolute;
   top: 50%;
   left: 50%;
