--- a/my-app/src/TileViews/EmptyState.css
+++ b/my-app/src/TileViews/EmptyState.css
@@ -17,12 +17,18 @@
 
 .empty-state-desc {
   margin-bottom: 30px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 @media all and (min-width: 804px) {
   .content-title h1 {
     margin-top: 76px;
   }
+}
+
+.original-state-caption {
+  margin-top: 48px;
 }
 
 /* IMAGES */
@@ -43,7 +49,7 @@
 
 .es-img2 {
   width: 482px;
-  margin-right: 85px;
+  margin-right: 50px;
   margin-bottom: 20px;
 }
 
