--- a/my-app/src/Grid.css
+++ b/my-app/src/Grid.css
@@ -35,8 +35,7 @@
 
 /* INTRO */
 
-.content-wrapper .intro-text {
-  padding: 0;
+.intro-text {
   color: #333333;
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
