--- a/my-app/src/Tile.css
+++ b/my-app/src/Tile.css
@@ -8,7 +8,7 @@
   border-radius: 18px;
   box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
 
-  transition: margin 0.3s ease-out;
+  transition: transform 0.3s ease-out;
 }
 
 @media all and (max-width: 350px) {
@@ -19,11 +19,10 @@
 }
 
 .tile:hover {
-  margin-top: -5px;
+  transform: translateY(-5px);
   cursor: pointer;
 }
 
-/* delete if not work */
 .overlay {
   position: absolute;
   top: 0;
@@ -48,12 +47,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
 }
-/* ^^^^ delete if not work */
 
 .tile-bgd {
   width: 100%;
