--- a/src/ContentWrapper.css
+++ b/src/ContentWrapper.css
@@ -6,20 +6,20 @@
     font-weight: 300;
     line-height: 1.8em;
     width: 100%;
-    padding: 55px 25px 80px 25px;
+    padding: 25px 25px 80px 25px;
     box-sizing: border-box;
 }
 
 @media all and (min-width: 650px) {
   .content-wrapper {
-    padding: 110px 0;
-    width: 600px;
-    margin: 0 auto;
+    padding-left: calc((100vw - 600px)/2);
+    padding-right: calc((100vw - 600px)/2);
   }
 }
 
-@media all and (min-width: 980px) {
+@media all and (min-width: 1000px) {
   .content-wrapper {
+    padding: 110px 0;
     width: calc(100% - 380px);
     margin: 0 190px;
   }
@@ -36,45 +36,45 @@
 
 .content-header {
   width: 100%;
-  height: 200px;
+  height: 144px;
   background-size: 650px;
   background-position: right;
 }
 
 @media all and (min-width: 650px) {
   .content-header {
-    height: 318px;
     background-size: 1440px;
     background-position: left;
+  }
+}
+
+@media all and (min-width: 1000px) {
+  .content-header {
+    height: 318px;
   }
 }
 
 /* TITLE */
 
 .content-title {
-  height: 70px;
   width: 100%;
   background-color: white;
   box-sizing: border-box;
-}
-
-@media all and (min-width: 650px) {
-  .content-title {
-    height: 204px;
-    position: absolute;
-    width: calc(100% - 350px);
-    margin: 0 175px;
-    top: 210px;
-    left: 0;
-    padding: 0 50px;
-  }
+  line-height: 50px;
 }
 
 @media all and (min-width: 1000px) {
   .content-title {
+    height: 204px;
+    position: absolute;
     width: 642px;
-    padding: 0 100px;
+    padding: 50px 100px;
+    top: 210px;
+    left: 0;
     margin: 0 calc(50% - 321px);
+  }
+  .content-title h1 {
+    text-align: center;
   }
 }
 
@@ -102,10 +102,9 @@
   margin-bottom: 30px;
 }
 
-@media all and (min-width: 1200px) {
+@media all and (min-width: 1000px) {
   .content-desc, .par-block {
-    margin-left: 160px;
-    margin-right: 160px;
+    margin: 0 calc(50% - 321px);
   }
 }
 
