--- a/src/TileViews/RBCX.css
+++ b/src/TileViews/RBCX.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-@media all and (min-width: 650px) {
+@media all and (min-width: 1200px) {
   .rbcx p, .rbcx h2 {
     padding: 0 50px;
   }
@@ -34,22 +34,23 @@
 }
 
 .rbcx-img2 {
-  width: 482px;
+  width: 100%;
   margin-right: 50px;
   margin-bottom: 70px;
 }
 
 /* 482px + 25px margins from content-wrapper */
-@media all and (max-width: 532px) {
+@media all and (min-width: 532px) {
   .rbcx-img2 {
-    width: 100%;
+    width: 482px;
+    margin: 0 calc(50% - 241px);
+    margin-bottom: 70px;
   }
 }
 
-@media all and (max-width: 1000px) {
-  .rbcx-img2 {
-    margin: 0 calc(50% - 241px);
-    margin-bottom: 70px;
+@media all and (min-width: 1000px) {
+  .rbcx-img {
+    margin: 0 50px 70px 0;
   }
 }
 
