--- a/src/TileViews/EmptyState.css
+++ b/src/TileViews/EmptyState.css
@@ -32,7 +32,7 @@
 /* TODO: Move paragraph text into a min-width box and float(?) right */
 .es-img1 {
   width: 531px;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
   margin-right: 10px;
 }
 
@@ -55,8 +55,8 @@
   }
 }
 
-@media all and (max-width: 1000px) {
-  .es-img2, .captioned-pic {
+@media all and (max-width: 1370px) {
+  .es-img1, .es-img2, .captioned-pic {
     margin: 0 calc(50% - 241px);
     margin-bottom: 20px;
   }
