--- a/src/TileViews/RBCX.css
+++ b/src/TileViews/RBCX.css
@@ -1,5 +1,12 @@
 .rbcx {
   position: relative;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  line-height: 1.8em;
+}
+
+.rbcx a {
+  color: #999999;
 }
 
 @media all and (min-width: 1200px) {
@@ -14,6 +21,77 @@
   background-image: url('../images/rbcx/header.png');
   background-color: #EA3A7D;
   background-repeat: no-repeat;
+}
+
+/* TEXT */
+
+.rbcx-desc {
+  margin-bottom: 50px;
+}
+
+.venture-caption {
+  margin-top: 50px;
+}
+
+.poster-container {
+  margin-bottom: 178px;
+}
+
+.poster-desc {
+  flex: 1;
+  position: relative;
+}
+
+@media all and (min-width: 1285px) {
+  .poster-container {
+    width: 100%;
+    display: flex;
+  }
+  .poster-desc-inner {
+    position: absolute;
+    bottom: 0;
+  }
+}
+
+.rbc-wrapper-a {
+  position: relative;
+  width: 100%;
+}
+
+@media all and (min-width: 800px) {
+  .rbc-wrapper-a {
+    padding-top: 80%;
+    margin-bottom: 300px;
+  }
+}
+
+.poster-desc-inner p, .poster-desc-inner h2 {
+  padding: 0 50px;
+}
+
+.center-box {
+  padding: 70px 50px;
+}
+
+@media all and (min-width: 675px) {
+  .center-box {
+    margin: 0 27.5%;
+    width: 45%;
+    padding: 70px 0;
+  }
+}
+
+.center-box p, .center-box h2 {
+  padding: 0;
+}
+
+@media all and (min-width: 800px) {
+  .playbook-box {
+    position: absolute;
+    padding-top: calc(400px + 35%);
+    left: 0;
+    top: 0;
+  }
 }
 
 /* IMAGES */
@@ -48,9 +126,9 @@
   }
 }
 
-@media all and (min-width: 1000px) {
-  .rbcx-img {
-    margin: 0 50px 70px 0;
+@media all and (min-width: 1370px) {
+  .rbcx-img, .rbcx-img2 {
+    margin: 0 50px 90px 0;
   }
 }
 
@@ -58,6 +136,74 @@
   width: 100%;
 }
 
+@media all and (min-width: 1285px) {
+  .rbcx-img4-cont {
+    flex: 2;
+  }
+}
+
+.rbcx-img4 {
+  width: 100%;
+  left: 0;
+}
+
 .rbc-dots {
-  width: 60%;
+  display: none;
+}
+
+.founder-img {
+  width: 100%;
+}
+
+@media all and (min-width: 800px) {
+  .rbc-dots {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+  }
+  .founder-img {
+    position: absolute;
+    top: 300px;
+    left: 0;
+    width: 45%;
+    margin: 0 27.5%;
+  }
+  .pink-box {
+    position: absolute;
+    top: 160px;
+    right: 0;
+    background-color: #F9CBCE;
+    padding-top: 20%;
+    width: 33%;
+    z-index: -1;
+  }
+}
+
+.backpacker {
+  margin: -5px;
+  width: 100%;
+}
+
+.open-book {
+  margin: -5px;
+  width: 100%;
+}
+
+@media all and (min-width: 650px) {
+  .backpacker {
+    width: 63.377%;
+  }
+  .open-book {
+    width: 36.623%;
+  }
+}
+
+.our-brand {
+  width: 62.3%;
+}
+
+.hand-cards {
+  width: 37.7%;
 }
