--- a/src/Main.css
+++ b/src/Main.css
@@ -49,7 +49,51 @@ a:hover, button:hover, a:focus, button:focus {
   height: 35px;
 }
 
+/* BACK BTN */
+
+.back-btn {
+  position: fixed;
+  z-index: 1000;
+  bottom: 10px;
+  right: 10px;
+}
+
+
+@media all and (min-width: 750px) and (min-height: 500px) {
+  .back-btn {
+    top: 423px;
+    left: 0;
+  }
+}
+
+@media all and (min-width: 950px) {
+  .back-btn {
+    left: 10vw
+  }
+}
+
+@media all and (min-width: 1250px) {
+  .back-btn {
+    left: 16vw
+  }
+}
+
+.back-arrow {
+  width: 109px;
+  height: 109px;
+  cursor: pointer;
+  background-image: url('./images/back-arrow.png');
+  background-position: center;
+  background-size: 109px;
+  transition: 0.5s background-image;
+}
+
+.back-arrow:hover {
+  background-image: url('./images/back-arrow-hover.png');
+}
+
 /* NAVBAR */
+/*TODO: Move navbar to separate component */
 
 .name-box {
   float: left;
