--- a/src/TileViews/RBCX.css
+++ b/src/TileViews/RBCX.css
@@ -53,7 +53,7 @@
 }
 
 .venture-caption {
-  margin-top: 50px;
+  margin-top: 0;
 }
 
 .poster-container {
@@ -135,7 +135,6 @@
 }
 
 .d-shadow {
-  
   box-shadow: 0 -5px 50px 0 rgba(0,0,0,0.05),0 -2px 15px 0 rgba(0,0,0,0.05);
 }
 
