--- a/src/TileViews/EmptyState.css
+++ b/src/TileViews/EmptyState.css
@@ -35,31 +35,32 @@
 }
 
 .es-img1 {
-  width: 531px;
-  margin-bottom: 150px;
+  width: 100%;
   margin-right: 10px;
+  margin-bottom: 20px;
 }
 
-@media all and (max-width: 581px) {
+@media all and (min-width: 581px) {
   .es-img1 {
-    width: 100%;
+    width: 531px;
+    margin-bottom: 150px;
   }
 }
 
 .es-img2 {
-  width: 482px;
+  width: 100%;
   margin-right: 60px;
   margin-bottom: 20px;
 }
 
 /* 482px + 25px margins from content-wrapper */
-@media all and (max-width: 532px) {
+@media all and (min-width: 532px) {
   .es-img2 {
-    width: 100%;
+    width: 482px;
   }
 }
 
-@media all and (max-width: 1370px) {
+@media all and (min-width: 532px) (max-width: 1370px) {
   .es-img1, .es-img2, .captioned-pic {
     margin: 0 calc(50% - 241px);
     margin-bottom: 20px;
@@ -71,54 +72,15 @@
 }
 
 .es-img4 {
-  position: absolute;
-  top: 100px;
   width: calc(100% - 60px);
   margin: 0 30px;
-  display: block;
+  margin-top: 100px;
 }
 
 @media all and (min-width: 650px) {
   .es-img4 {
-    width: 50%;
-    margin: 0 25%;
+    width: 75%;
+    margin: 0 12.5%;
+    margin-top: 100px;
   }
-}
-
-@media all and (min-width: 1200px) {
-  .es-img4 {
-    position: absolute;
-    top: 0;
-  }
-}
-
-/* SHAPES */
-
-.es-shape-container {
-  position: relative;
-  margin-top: 100px;
-  padding-top: 100px;
-  width: 100%;
-  height: 200px;
-  overflow: hidden;
-  text-align: center;
-}
-
-@media all and (min-width: 400px) {
-  .es-shape-container {
-    height: 300px;
-  }
-}
-
-@media all and (min-width: 500px) {
-  .es-shape-container {
-    height: 500px;
-  }
-}
-
-.es-shape-thingy {
-  width: 0;
-	height: 0;
-	border-bottom: 350px solid #F9F7F2;
-	border-right: 400vw solid transparent;
 }
