--- a/src/TileViews/EmptyState.css
+++ b/src/TileViews/EmptyState.css
@@ -28,6 +28,10 @@
   margin-top: 0;
 }
 
+.goal-text {
+  margin-bottom: 50px;
+}
+
 /* IMAGES */
 
 .empty-state-img {
@@ -43,7 +47,7 @@
 @media all and (min-width: 581px) {
   .es-img1 {
     width: 531px;
-    margin-bottom: 150px;
+    margin-bottom: 40px;
   }
 }
 
@@ -83,4 +87,12 @@
     margin: 0 12.5%;
     margin-top: 100px;
   }
+}
+
+.es-bottom {
+  display: block;
+  padding-top: 40px;
+  width: 150px;
+  margin: 0 auto;
+  margin-bottom: 120px;
 }
