--- a/src/Main.css
+++ b/src/Main.css
@@ -15,6 +15,12 @@ h2 {
   color: #333333;
 }
 
+h3 {
+  font-size: 1em;
+  color: #F9CBCE;
+
+}
+
 a, button {
   border: none;
   background-color: transparent;
