--- a/src/Main.css
+++ b/src/Main.css
@@ -104,13 +104,11 @@ a:hover, button:hover, a:focus, button:focus {
 .name-box {
   float: left;
   position: relative;
-  width: 120px;
+  width: 130px;
   height: 35px;
 }
 
 .red-rectangle {
-  position: absolute;
-  top: -2px;
   width: 8px;
   height: 24px;
   background-color: red;
@@ -118,7 +116,8 @@ a:hover, button:hover, a:focus, button:focus {
 }
 
 .navbar .my-name {
-  margin: 0;
+  margin-left: 0;
+  height: 26px;
   width: 120px;
 }
 
