--- a/src/Grid.css
+++ b/src/Grid.css
@@ -35,11 +35,30 @@
 
 /* INTRO */
 
-.intro-text {
-  color: #666666;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
+.content-wrapper a {
+  font-family: 'Roboto', sans-serif;
+  color: #EA1C44;
   font-size: 16px;
+  font-weight: 700;
+  padding-left: 80px;
+}
+
+.content-wrapper h3 {
+  text-align: right;
+  padding-right: 80px;
+}
+
+.intro-title {
+  line-height: 125%;
+  font-weight: 600;
+  color: #333333;
+  padding-left: 80px;
+}
+
+.landing-img {
+  position: absolute;
+  margin-left: -120;
+  z-index: -1;
 }
 
 /* TODO: Kinda hacky. Find a better way to achieve same behavior */
