Fix font and update back button

--- a/src/Tile.css
+++ b/src/Tile.css
@@ -42,7 +42,7 @@
 }
 
 .overlay-text {
-  font-family: open sans;
+  font-family: 'Open Sans', sans-serif;
   color: #333333;
   font-size: 14px;
   line-height: 160%;
