--- a/src/Tile.css
+++ b/src/Tile.css
@@ -1,7 +1,7 @@
 .tile {
   position: relative;
 
-  height: 500px;
+  height: 470px;
   width: 350px;
   background-color: #FFFFFF;
 
@@ -55,7 +55,7 @@
 
 .tile-bgd {
   width: 100%;
-  border-radius: 18px;
+  border-radius: 18px 18px 0 0;
 }
 
 .tile-bottom {
