--- a/src/Grid.css
+++ b/src/Grid.css
@@ -77,8 +77,8 @@
 
 .front-page-backdrop {
   position: relative;
-  background-image: url('./images/landing-background-mobile.png');
-  background-size: 70%;
+  background-image: url('./images/landing-background.png');
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: top right;
 
@@ -91,8 +91,7 @@
 
 @media all and (min-width: 768px) {
   .front-page-backdrop {
-    background-image: url('./images/landing-background.png');
-    background-size: 50%;
     height: 590px;
+    margin-bottom:100px;
   }
 }
