--- a/src/Main.css
+++ b/src/Main.css
@@ -52,17 +52,17 @@ a:hover, button:hover, a:focus, button:focus {
 .back-btn {
   position: fixed;
   z-index: 1000;
-  bottom: 10px;
-  right: 10px;
+  top: 10px;
+  left: 10px;
 }
 
 
-@media all and (min-width: 750px) and (min-height: 500px) {
+/*@media all and (min-width: 750px) and (min-height: 500px) {
   .back-btn {
     top: 423px;
     left: 0;
   }
-}
+}*/
 
 @media all and (min-width: 950px) {
   .back-btn {
@@ -88,4 +88,24 @@ a:hover, button:hover, a:focus, button:focus {
 
 .back-arrow:hover {
   background-image: url('./images/back-arrow-hover.png');
+}
+
+.pre-footer {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #473DD6;
+  text-align: center;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding: 75px;
+}
+
+.pre-footer h1,a {
+  color: inherit;
+  text-align: inherit;
+  font-family: inherit;
+}
+
+.pre-footer a:hover, .pre-footer a:active, .pre-footer a:focus {
+  color:inherit;
 }
