--- a/src/Grid.css
+++ b/src/Grid.css
@@ -77,7 +77,7 @@
 
 .front-page-backdrop {
   position: relative;
-  background-image: url('./images/landing-background.png');
+  background-image: url('./images/landing-background-mobile.png');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: top right;
@@ -86,11 +86,13 @@
   font-weight: 300;
   line-height: 1.8em;
   width: 100%;
+  height: 36vh;
   box-sizing: border-box;
 }
 
-@media all and (min-width: 768px) {
+@media all and (min-width: 550px) {
   .front-page-backdrop {
-    height: 38vw;
+    background-image: url('./images/landing-background.png');
+    height: 40vw;
   }
 }
