--- a/src/About.css
+++ b/src/About.css
@@ -1,4 +1,7 @@
 .about {
+  background-image: url('./images/about-bg.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   line-height: 1.8em;
@@ -37,12 +40,14 @@
     width: 420px;
   }
 
-  .rectangle {
+  .sparkle {
     position: absolute;
-    top: 95px;
-    height: 375px;
-    width: 304px;
-    background-color: #FDEDEE;
+    z-index: 1;
+    bottom: 35px;
+    height: 91px;
+    width: 84px;
+    background-size: 100%;
+    background-image: url('./images/sparkle.png');
   }
 
   .daihan-who {
@@ -92,13 +97,13 @@
 .list-column ol {
   list-style-type: none;
   padding: 0;
+  text-align: center;
 }
 
 .about-section-header {
   margin-top: 100px;
 }
 
-.about-footer {
-  padding-bottom: 114px;
-  width: 100%;
+.cat-pic {
+  width: 75%;
 }
