--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,10 +1,9 @@
 .footer {
-  height: 633px;
-  padding-top: 100px;
   box-sizing: border-box;
 }
 
 .footer-content {
+  padding-top: 100px;
   width: 100%;
   height: 300px;
   margin: auto;
@@ -68,10 +67,8 @@
 }
 
 @media all and (min-width: 1000px) {
-  .footer {
-    padding-top: 200px;
-  }
   .footer-content {
+    padding-top: 200px;
     margin: 0 auto;
     margin-top:20px;
     width: 600px;
@@ -87,4 +84,30 @@
     width: 200px;
     height: 300px;
   }
+}
+
+.pre-footer {
+  width: 100%;
+  height: 300px;
+  box-sizing: border-box;
+  background-image: url('./images/writing-bg.png');
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #421DA9;
+  text-align: center;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  padding-top: 50px;
+}
+
+.pre-footer h1, p a {
+  color: white;
+  text-align: center;
+  font-family: inherit;
+  font-weight: bold;
+}
+
+.pre-footer a:hover, .pre-footer a:active, .pre-footer a:focus {
+  color: white;
 }
